--- a/index.html
+++ b/index.html
@@ -121,44 +121,29 @@
 
   <div class="cert-list"> <!-- Added this wrapper -->
 
-    <div class="cert-item">
-      <h3>
-        <a href="#" onclick="alert('Currently Pursuing (Expected Completion Soon)'); return false;">
-          Cloud and DevOps Certification
-        </a>
-      </h3>
+    <!-- Make the entire box clickable by wrapping with <a> -->
+    <a href="#" onclick="alert('Currently Pursuing (Expected Completion Soon)'); return false;" class="cert-item">
+      <h3>Cloud and DevOps Certification</h3>
       <p>Fortune Cloud Technologies, Pune</p>
-    </div>
+    </a>
 
-    <div class="cert-item">
-      <h3>
-        <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_AWS%20Certified%20Developer%20%20Associate%20DVAC02%20Cert%20Prep.pdf" 
-           target="_blank">
-           AWS Certified Developer - Associate
-        </a>
-      </h3>
-      <p>LinkedIn Learning</p>
-    </div>
+    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_AWS%20Certified%20Developer%20%20Associate%20DVAC02%20Cert%20Prep.pdf" 
+       target="_blank" class="cert-item">
+       <h3>AWS Certified Developer - Associate</h3>
+       <p>LinkedIn Learning</p>
+    </a>
 
-    <div class="cert-item">
-      <h3>
-        <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Workloads%20and%20Machine%20Learning%20on%20Azure.pdf" 
-           target="_blank">
-           Workloads and Machine Learning on Azure
-        </a>
-      </h3>
-      <p>LinkedIn Learning & Microsoft</p>
-    </div>
+    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Workloads%20and%20Machine%20Learning%20on%20Azure.pdf" 
+       target="_blank" class="cert-item">
+       <h3>Workloads and Machine Learning on Azure</h3>
+       <p>LinkedIn Learning & Microsoft</p>
+    </a>
 
-    <div class="cert-item">
-      <h3>
-        <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Professional%20Certificate%20by%20Microsoft%20and%20LinkedIn.pdf" 
-           target="_blank">
-           Microsoft Azure AI Essentials
-        </a>
-      </h3>
-      <p>LinkedIn Learning & Microsoft</p>
-    </div>
+    <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Professional%20Certificate%20by%20Microsoft%20and%20LinkedIn.pdf" 
+       target="_blank" class="cert-item">
+       <h3>Microsoft Azure AI Essentials</h3>
+       <p>LinkedIn Learning & Microsoft</p>
+    </a>
 
   </div> <!-- /.cert-list -->
 </section>
