--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
     <h2>Projects</h2>
     <div class="project-container">
       <div class="project">
-        <h3>🚌 Bus Booking System (PHP + MySQL + AWS EC2)</h3>
+        <h3>1] 🚌 Bus Booking System (PHP + MySQL + AWS EC2)</h3>
   <p>Built a dynamic bus reservation platform hosted on <strong>AWS EC2 (Ubuntu)</strong> using <strong>PHP</strong> and <strong>MySQL</strong>, enabling secure booking.</p>
   <p>⚙️ <strong>Tech Stack:</strong> AWS EC2, PHP, MySQL, Nginx, HTML, CSS</p>
   <a href="https://github.com/Prasad-bhoite19/Bus_Booking_App" target="_blank" class="btn">🔗 View Project</a>
       </div>
       <div class="project">
-  <h3>🌐 Database Migration: MySQL → Amazon RDS (via EC2)</h3>
+  <h3>2] 🌐 Database Migration: MySQL → Amazon RDS (via EC2)</h3>
   <p>Migrated a MySQL database from an <strong>AWS EC2 instance</strong> to <strong>Amazon RDS (MySQL engine)</strong>, ensuring secure and efficient data transfer with proper security group configuration.</p>
   <ul>
     <li>⚙️ <strong>Tech Stack:</strong> AWS EC2, RDS, MySQL, Bash, AWS CLI</li>
@@ -97,7 +97,7 @@
   <a href="https://github.com/Prasad-bhoite19/MYSQL-TO-RDS-MIGRATION-USING-EC2" target="_blank" class="btn">🔗 View Project</a>
 </div>
       <div class="project">
-         <h3>🌐 Three-Tier Web Application (AWS EC2 + RDS + PHP)</h3>
+         <h3>3] 🌐 Three-Tier Web Application (AWS EC2 + RDS + PHP)</h3>
   <p>Deployed a scalable 3-tier cloud architecture using <strong>AWS EC2 (Ubuntu)</strong> for web and application layers and <strong>RDS MySQL</strong> for the database tier.</p>
   <ul>
     <li>⚙️ <strong>Tech Stack:</strong> AWS EC2, RDS, PHP, MySQL, Nginx</li>
@@ -105,7 +105,7 @@
   <a href="https://github.com/Prasad-bhoite19/aws-3tier-webapp" target="_blank" class="btn">🔗 View Project</a>
 </div>
        <div class="project">
-         <h3>🌐 PHP Image Upload Project (Nginx + PHP 8.3 + RDS + S3)</h3>
+         <h3>4] 🌐 PHP Image Upload Project (Nginx + PHP 8.3 + RDS + S3)</h3>
 <p>Created a cloud-based image upload system using <strong>EC2</strong> with Nginx & PHP 8.3, storing images in <strong>Amazon S3</strong> and metadata in <strong>RDS MySQL</strong>.</p>
 <ul>
   <li>⚙️ <strong>Tech Stack:</strong> EC2, S3, RDS, PHP 8.3, Nginx</li>
@@ -123,25 +123,25 @@
 
     <!-- Make the entire box clickable by wrapping with <a> -->
     <a href="#" onclick="alert('Currently Pursuing (Expected Completion Soon)'); return false;" class="cert-item">
-      <h3>Cloud and DevOps Certification</h3>
+      <h3>1) Cloud and DevOps Certification</h3>
       <p>Fortune Cloud Technologies, Pune</p>
     </a>
 
     <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_AWS%20Certified%20Developer%20%20Associate%20DVAC02%20Cert%20Prep.pdf" 
        target="_blank" class="cert-item">
-       <h3>AWS Certified Developer - Associate</h3>
+       <h3>2) AWS Certified Developer - Associate</h3>
        <p>LinkedIn Learning</p>
     </a>
 
     <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Workloads%20and%20Machine%20Learning%20on%20Azure.pdf" 
        target="_blank" class="cert-item">
-       <h3>Workloads and Machine Learning on Azure</h3>
+       <h3>3) Workloads and Machine Learning on Azure</h3>
        <p>LinkedIn Learning & Microsoft</p>
     </a>
 
     <a href="https://prasad-bhoite19.github.io/prasad-portfolio/assets/certifications/CertificateOfCompletion_Microsoft%20Azure%20AI%20Essentials%20Professional%20Certificate%20by%20Microsoft%20and%20LinkedIn.pdf" 
        target="_blank" class="cert-item">
-       <h3>Microsoft Azure AI Essentials</h3>
+       <h3>4) Microsoft Azure AI Essentials</h3>
        <p>LinkedIn Learning & Microsoft</p>
     </a>
 
