--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </a>
 
     <!-- Email -->
-    <a href="mailto:prasadsb2002@gmail.com" class="icon-btn" title="Email Me">
+    <a href="mailto:prasad.bhoite.devops@gmail.com" class="icon-btn" title="Email Me">
       <i class="fas fa-envelope"></i>
     </a>
 
